--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,8 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
   --fixed-width: 620px;
+  --large-screen-width: 1170px;
+  --small-screen-width: 90vw;
 }
 /*
 =============== 
@@ -154,12 +156,12 @@ button {
 }
 .end-part {
   display: flex;
-  gap: 5rem;
+  gap: 7rem;
 }
 .line {
-  border-bottom: 2px solid black;
+  border-bottom: 0.15rem solid black;
   position: absolute;
-  top: 66px;
+  top: 4.2rem;
   /* width: 60vw; */
   width: 90%;
 }
@@ -175,8 +177,8 @@ button {
   width: 25rem;
   position: absolute;
   left: 0;
-  width: 200px;
-  top: 0px;
+  width: 12rem;
+  top: 0rem;
 }
 .middle-one {
   position: relative;
@@ -188,8 +190,8 @@ button {
   justify-content: center;
   margin-top: 1rem;
 
-  border: 3px solid #ffa94d;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border: 0.2rem solid #ffa94d;
+  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
 
   padding: 1rem 2rem;
@@ -215,13 +217,13 @@ main {
   background: var(--clr-primary-5);
   color: var(--clr-primary-1);
   padding: 0.375rem 0.75rem;
-  letter-spacing: 1px;
+  letter-spacing: 0.0325rem;
   display: inline-block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-primary-5);
+  border: 0.2rem solid var(--clr-primary-5);
   cursor: pointer;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   flex-shrink: 1;
 }
@@ -232,15 +234,15 @@ main {
 }
 .imgs {
   display: flex;
-  padding: 5px;
+  padding: 5rem;
   justify-content: center;
   align-items: center;
   padding: 2rem;
   justify-content: space-evenly;
 }
 .img-item {
-  margin: 5px;
-  border-radius: 8px;
+  margin: 1.5rem;
+  border-radius: 4rem;
   width: 20rem;
 }
 .big {
@@ -257,62 +259,12 @@ main {
 .thankyou-not {
   color: white;
 }
-/*
-=============== 
-Quiz
-===============
-*/
-
-.quiz {
-  width: 150vw;
-  max-width: var(--max-width);
-  margin: 4rem auto;
-  background: var(--clr-white);
-  border-radius: var(--radius);
-  padding: 3rem;
-}
-.quiz-small {
-  max-width: 500px;
-}
-.container h2 {
-  margin-bottom: 2rem;
-  text-align: center;
-  line-height: 1.5;
-  text-transform: none;
-}
-.answer-btn {
-  display: block;
-  width: 100%;
-  margin: 0.75rem auto;
-  background: var(--clr-primary-7);
-  border-radius: var(--radius);
-  border-color: transparent;
-  color: var(--clr-black);
-  letter-spacing: var(--spacing);
-  font-size: 1rem;
-  cursor: pointer;
-  padding: 0.5rem 0;
-  transition: var(--transition);
-}
-@media screen and (min-width: 576px) {
-  .answer-btn {
-    max-width: 60%;
-  }
-}
-.answer-btn:hover {
-  background: var(--clr-primary-5);
-  color: var(--clr-white);
-}
-.correct-answers {
-  font-size: 1rem;
-  margin-bottom: 2rem;
-  text-align: right;
+.thankyou {
   text-transform: capitalize;
-  letter-spacing: var(--spacing);
-  color: var(--clr-green-dark);
+  color: var(--clr-grey-1);
+  letter-spacing: 0.02rem;
+  font-size: 1rem;
 }
-.next-question,
-.close-btn,
 .submit-btn {
   border-radius: var(--radius);
   border-color: transparent;
@@ -330,10 +282,7 @@ Quiz
   transition: var(--transition);
   cursor: pointer;
 }
-.next-question:hover {
-  background: #805900;
-  color: #ffb100;
-}
+
 /*
 =============== 
 Form
@@ -355,8 +304,7 @@ Form
 }
 
 .form-input {
-  border: none;
-  background: var(--clr-grey-10);
+  border: 0.2rem solid var(--clr-grey-10);
   font-size: 1rem;
   padding: 0.25rem 0.5rem;
   width: 100%;
@@ -369,6 +317,11 @@ Form
 .submit-btn {
   width: 100%;
   margin-top: 3rem;
+  margin-bottom: 0.5rem;
+}
+
+.elementor-custom {
+  margin-top: 7rem;
 }
 /*
 =============== 
