--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
+  box-sizing: border-box;
 }
 ul {
   list-style-type: none;
@@ -205,7 +206,7 @@ button {
   padding: 4rem;
   direction: rtl;
 }
-main {
+section {
   min-height: 20vh;
   display: flex;
   justify-content: center;
@@ -380,4 +381,3 @@ Loading
 .close-btn {
   margin-right: auto;
 }
-
