--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,11 @@ p {
     width: 95vw;
   }
 }
+@media screen and (min-width: 600px) {
+  .section {
+    width: 80vw;
+  }
+}
 button {
   flex-grow: 3;
 }
