--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,12 @@ p {
     width: 80vw;
   }
 }
+  @media only screen and (max-device-width: 480px) {
+       /* styles for mobile browsers smaller than 480px; (iPhone) */
+     .section {
+    width: 60vw;
+  }
+    }
 button {
   flex-grow: 3;
 }
