--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ p {
   .img-item {
   margin: 0.5rem;
   border-radius: 2rem;
-  width: 2rem;
+  width: 2vw;
 }
 }
   @media only screen and (max-device-width: 480px) {
@@ -154,7 +154,7 @@ p {
      .img-item {
   margin: 0.5rem;
   border-radius: 2rem;
-  width: 2rem;
+  width: 2vw;
 }
     }
 button {
