--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ p {
 }
 @media screen and (min-width: 600px) {
   .section {
-    width: 80vw;
+    width: 50vw;
   }
   .img-item {
   margin: 0.5rem;
@@ -146,10 +146,10 @@ p {
   width: 2vw;
 }
 }
-  @media only screen and (max-device-width: 480px) {
+  @media only screen and (min-width: 200px) {
        /* styles for mobile browsers smaller than 480px; (iPhone) */
      .section {
-    width: 30vw;
+    width: 50vw;
   }
      .img-item {
   margin: 0.5rem;
