--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,9 @@ p {
   width: 70vw;
   margin: 0 auto;
   max-width: var(--max-width);
+    display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 992px) {
