--- a/src/index.css
+++ b/src/index.css
@@ -147,8 +147,7 @@ p {
   width: 2vw;
 }
 }
-  @media only screen and (min-width: 200px) {
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
+  @media screen and (min-width: 200px) {
  .section {
     width: auto;}
     
